--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
@@ -72,9 +73,24 @@ dependencies {
     androidTestCompile "com.android.support:support-annotations:$rootProject.ext.supportLibraryVersion"
     androidTestCompile "com.android.support:support-v4:$rootProject.ext.supportLibraryVersion"
     androidTestCompile "com.android.support:recyclerview-v7:$rootProject.ext.supportLibraryVersion"
+
+    // kotlin
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
+    compile "org.jetbrains.anko:anko-common:$ankoVersion"
+
+    // JSON
+    compile "com.google.code.gson:gson:2.4"
 }
 
 repositories {
     mavenCentral()
+}
+
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlinVersion"
+    }
 }
