--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,37 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    // Define versions in a single place
+    ext {
+        kotlinVersion = '1.0.2-1'
+        ankoVersion = '0.8.3'
+        rxkotlinVersion = '0.55.0'
+        rxandroidVersion = '1.2.1'
+        rxLifecycleVersion = '0.6.1'
+
+        // Sdk and tools
+        minSdkVersion = 17
+        targetSdkVersion = 22
+        compileSdkVersion = 23
+        buildToolsVersion = '23.0.3'
+
+        // App dependencies
+        supportLibraryVersion = '23.4.0'
+        guavaVersion = '18.0'
+        junitVersion = '4.12'
+        mockitoVersion = '1.10.19'
+        powerMockito = '1.6.2'
+        hamcrestVersion = '1.3'
+        runnerVersion = '0.4.1'
+        rulesVersion = '0.4.1'
+        espressoVersion = '2.2.1'
+    }
     repositories {
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.1.2'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -20,24 +46,4 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
-}
-
-// Define versions in a single place
-ext {
-    // Sdk and tools
-    minSdkVersion = 10
-    targetSdkVersion = 22
-    compileSdkVersion = 23
-    buildToolsVersion = '23.0.3'
-
-    // App dependencies
-    supportLibraryVersion = '23.4.0'
-    guavaVersion = '18.0'
-    junitVersion = '4.12'
-    mockitoVersion = '1.10.19'
-    powerMockito = '1.6.2'
-    hamcrestVersion = '1.3'
-    runnerVersion = '0.4.1'
-    rulesVersion = '0.4.1'
-    espressoVersion = '2.2.1'
 }
