--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ buildscript {
         runnerVersion = '0.4.1'
         rulesVersion = '0.4.1'
         espressoVersion = '2.2.1'
+        robolectricVersion = '3.1'
     }
     repositories {
         jcenter()
