--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,13 +42,8 @@ android {
 }
 
 dependencies {
-    // compile fileTree(dir: 'libs', include: ['*.jar'])
-    // compile files("libs/netty-common-4.1.1.Final.jar")
-    // compile files("libs/netty-buffer-4.1.1.Final.jar")
-    // compile files("libs/netty-codec-4.1.1.Final.jar")
-    // compile files("libs/netty-transport-4.1.1.Final.jar")
+    compile fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile 'io.netty:netty-all:4.1.1.Final'
     // App's dependencies, including test
     compile "com.android.support:support-v4:$rootProject.ext.supportLibraryVersion"
     compile "com.android.support:appcompat-v7:$rootProject.ext.supportLibraryVersion"
@@ -59,9 +54,10 @@ dependencies {
     compile "com.android.support.test.espresso:espresso-idling-resource:$rootProject.ext.espressoVersion"
 
     // Log
-    compile 'org.jetbrains:annotations:13.0'
+    // compile 'org.jetbrains:annotations:13.0'
     compile 'com.jakewharton.timber:timber:4.1.2'
-    compile 'com.orhanobut:logger:1.15'
+    compile(name:'logger-debug', ext:'aar')
+    // compile 'com.orhanobut:logger:1.15'
 
     // Dependencies for local unit tests
     testCompile "junit:junit:$rootProject.ext.junitVersion"
@@ -106,6 +102,9 @@ dependencies {
 
 repositories {
     mavenCentral()
+    flatDir{
+        dirs 'libs'
+    }
 }
 
 buildscript {
