--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
@@ -100,10 +101,21 @@ dependencies {
     compile "com.trello:rxlifecycle:$rxLifecycleVersion"
     compile "com.trello:rxlifecycle-components:$rxLifecycleVersion"
     compile "com.trello:rxlifecycle-kotlin:$rxLifecycleVersion"
+
+    // bus
+    compile 'com.squareup:otto:1.3.8'
+    compile 'org.greenrobot:eventbus:3.0.0'
+    apt 'org.greenrobot:eventbus-annotation-processor:3.0.1'
 }
 
 repositories {
     mavenCentral()
+}
+
+apt {
+    arguments {
+        eventBusIndex "com.meibug.playground.bus.MyEventBusIndex"
+    }
 }
 
 buildscript {
